infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: top-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
